# marek_translate

./: .gitignore  Cargo.toml  README.md
marek_translate_api/: Cargo.toml
marek_translate_api/src/: lib.rs
marek_translate_locally/: Cargo.toml
marek_translate_locally/src/: lib.rs  models.rs
marek_translate_test/: Cargo.toml  README.md
marek_translate_test/src/: main.rs
